# article-to-media-image

./: .gitignore  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
docs/plans/: 2026-03-21-article-to-media-image-design.md  2026-03-21-implementation.md  2026-03-22-skill-refactor-design.md  2026-03-22-skill-refactor-implementation.md  2026-03-22-skill-refactoring-design.md  2026-03-22-skill-refactoring-final-design.md  2026-03-22-skill-refactoring-implementation.md  2026-03-22-slide-card-implementation.md  2026-03-22-slide-card-redesign-design.md  2026-03-22-style-insight-documentation-design.md
rules/: 01-技术底线.md  03-风格灵感.md
scripts/: post-process.sh  validate-templates.sh
src/: __init__.py  cli.py  main.py
src/config/: __init__.py  default_config.yaml  settings.py
src/renderer/: __init__.py  context.py  engine.py
src/utils/: __init__.py  file.py  validator.py
templates/: README.md  infographic.html  style-business.html  style-card-deep-blue.html  style-dark-tech.html  style-dialog-red-blue.html  style-journal.html  style-lab-blueprint.html  style-magazine.html  style-memphis.html  style-newspaper.html  style-nordic.html  style-process-blue-green.html  style-retro-future.html  style-step-blue.html
templates/card/: README.md  style.css  template.html
templates/core/: slide-card-base.css  slide-themes.css
templates/dark/: README.md  template.html
templates/gradient/: README.md  style.css  template.html
templates/minimal/: README.md  template.html
templates/tech_modern/: README.md  template.html
tests/: test_all_templates.py
(+11 files in other folders)
