[project]
name = "article-to-media-image"
version = "0.1.0"
description = "MCP Skill to convert articles to shareable card images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
article-to-media-image = "src.main:main"
