[project]
name = "article-to-media-image"
version = "0.2.0"
description = "Convert articles to shareable HTML card images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
article-to-card = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
